--- a/index.html
+++ b/index.html
@@ -1,17 +1,40 @@
 <!DOCTYPE html>
 <html lang='en'>
-   <head>
-      <meta charset='utf-8' />
-      <title>Simple HTML5 Player</title>
-      <script src='jquery-2.2.1.min.js'></script>
-      <script src='script.js'></script>
-   </head>
-   <body>
-      <div id='media-player'>
-         <video id='media-video' controls>
-            <source src='vid.mp4' type='video/mp4'>
-         </video>
-         <div id='media-controls'></div>
+
+<head>
+  <meta charset='utf-8' />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Simple HTML5 Player</title>
+  <script src='jquery-2.2.1.min.js'></script>
+  <script src='script.js'></script>
+  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+</head>
+
+<body>
+  <div id='media-player'>
+    <div class="fa fa-pause fa-5x" id='video-icon'></div>
+    <video id='media-video' autoplay muted onended="playToRepeat()">
+      <source src='vid.mp4' type='video/mp4'>
+    </video>
+    <!-- Controls -->
+    <div class="row" id='video-controls'>
+      <i id="play-pause" class="fa fa-pause fa-2x col-md-2"></i>
+      <input type="range" id="volume-bar" min="0" max="1" step="0.1" value="1">
+      <i class="fa fa-volume-off fa-2x" id="mute"></i>
+      <input type="range" id="seek-bar" min='0' max='1' value='0' step='0.1'>
+      <i class="fa fa-arrows-alt fa-2x" id="full-screen"></i>
+
+      <div>
+        Time left:<span id="left-duration"></span>
+        Duration:<span id="video-duration"></span>
+        Current progress:<span id="current-time"></span>
       </div>
-   </body>
+    </div>
+  </div>
+  </div>
+
+
+</body>
+
 </html>
