--- a/index.html
+++ b/index.html
@@ -22,13 +22,16 @@
       <i id="play-pause" class="fa fa-pause fa-2x col-md-2"></i>
       <input type="range" id="volume-bar" min="0" max="1" step="0.1" value="1">
       <i class="fa fa-volume-off fa-2x" id="mute"></i>
-      <input type="range" id="seek-bar" min='0' max='1' value='0' step='0.1'>
+      <input type="range" id="seek-bar" min='0' max='100' value='0' step='1'>
       <i class="fa fa-arrows-alt fa-2x" id="full-screen"></i>
-
+      <span class='time-container'>
+        <span id="current-time"></span>
+        |
+        <span id="video-duration"></span>
+      </span>
       <div>
-        Time left:<span id="left-duration"></span>
-        Duration:<span id="video-duration"></span>
-        Current progress:<span id="current-time"></span>
+        Time left:
+        <span id="left-duration"></span>
       </div>
     </div>
   </div>
