--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
       </video>
       <!-- Controls -->
       <div class="row" id='video-controls'>
-        <i id="play-pause" class="fa fa-pause fa-2x col-md-2"></i>
-        <i class="col-md-2 fa fa-volume-off fa-2x" id="mute"></i>
+        <i id="play-pause" class="fa fa-pause fa-2x col-md-1"></i>
+        <i class="col-md-1 fa fa-volume-off fa-2x" id="mute"></i>
         <input type="range" class="col-md-2" id="volume-bar" min="0" max="1" step="0.1" value="1">
-        <span class='col-md-3 time-container'>
-          <button class='btn btn-default btn-xs' id='toggle-duration'>Toggle</button>
+        <span class='time-container col-md-3'>
           <span id="current-time"></span>
           |
           <span id="video-duration"></span>
+          <button class='btn btn-default btn-xs' id='toggle-duration'>Toggle</button>
         </span>
         <input type="range" class="col-md-4" id="seek-bar" min='0' max='100' value='0' step='1'>
         <i class="fa fa-arrows-alt fa-2x" id="full-screen"></i>
