moved code into functions.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <div class='container-fluid'>
     <div id='media-player'>
       <div class="fa fa-pause fa-5x" id='video-icon'></div>
-      <video id='media-video' autoplay muted onended="playToRepeat()">
+      <video id='media-video' autoplay muted>
         <source src='vid.mp4' type='video/mp4'>
       </video>
       <!-- Controls -->
